fixed mobile nav bodyscrolllock on mobile

--- a/src/scss/partials/globals/_global.scss
+++ b/src/scss/partials/globals/_global.scss
@@ -108,7 +108,7 @@ ul, ol {
     display: block;
     position: absolute;
     left: 0;
-    bottom: 0;
+    top: 0;
     right: 0;
     height: 0;
     background: $black;
@@ -119,6 +119,8 @@ ul, ol {
     color: #fff;
     &:before {
       height: 100%;
+      bottom: 0;
+      top: unset;
     }
   }
   
